# Tori-Robot

./: LICENSE  README.md  robot_description.urdf
tori_description/: CMakeLists.txt  package.xml
tori_description/cfg/: robot.rviz
tori_description/launch/: tori_upload.launch
tori_description/meshes/: ankle_l_collision.stl  ankle_r.stl  calf_r_collision.stl  foot_l_collision.stl  foot_r_collision.stl  hip_x_y_l.stl  hip_x_y_r.stl  hip_z_x_l.stl  pca.stl  rpi.stl  servo.stl  spine_2.stl  thigh_l.stl  thigh_r_collision.stl
tori_description/urdf/: tori.gazebo.xacro  tori.transmission.xacro  tori.urdf.xacro  tori_autogen1.urdf  tori_joint_limited_robot_renamed.urdf.xacro  tori_robot.urdf.xacro
tori_description/urdf/realsense_camera/: model.sdf
tori_gazebo/: CMakeLists.txt  package.xml
tori_gazebo/controller/: arm_controller_tori.yaml
tori_gazebo/launch/: controller_utils.launch  tori.launch  tori_ign.launch  tori_joint_limited_rename.launch  tori_real.launch  tori_rviz.launch
tori_gazebo/msg/: Tori_joint_positions.msg
tori_gazebo/src/RL/: TD3.py  classes.py  comm_test5.py  comm_test6.py  control_motion.py  control_motion_walk_direction.py  control_motion_walk_vanilla.py  control_motion_walk_vanilla_ros.py  control_motion_walk_vanilla_ros2.py  utils.py  utils_walk_vanilla.py  utils_walk_vanilla_ros.py  walk_direction.py  walk_direction_ros.py  walk_direction_utils.py  walk_vanilla.py  walk_vanilla_ros.py
tori_gazebo/worlds/: table_can.world  tori.world  tori_ign.sdf  tori_ign.world  world_test.sdf
tori_gazebo/worlds/plugins/: CMakeLists.txt
tori_gazebo/worlds/plugins/models/cylinder/: model.sdf
tori_gazebo/worlds/simplified/: tori.world
tori_msgs/: CMakeLists.txt  package.xml
tori_msgs/msg/: Replay.msg  State.msg  ToriJointAngles.msg
